RESOLVED FIXED16745
[GTK] Context menu doesn't feel or look native - no icons
https://bugs.webkit.org/show_bug.cgi?id=16745
Summary [GTK] Context menu doesn't feel or look native - no icons
Christian Dywan
Reported 2008-01-05 14:04:27 PST
The context menu Holger implemented works very well. However it doesn't look or feel native in a Gtk+ environment at all. Currently it looks like a typical Mac OS X menu. The first step is to use stock or named icons where it fits and this is the primary goal of this bug report.
Attachments
Alp Toker
Comment 1 2008-01-07 08:23:21 PST
Fixed in r29228.
Note You need to log in before you can comment on or make changes to this bug.