2008-01-07  Luca Bruno  <lethalman88@gmail.com>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=16745
        [GTK] Context menu doesn't feel or look native - no icons

        Use GTK+ stock icons for menu items where possible.

        * platform/gtk/ContextMenuItemGtk.cpp:
        (WebCore::gtkStockIDFromContextMenuAction):
        (WebCore::ContextMenuItem::createNativeMenuItem):
        (WebCore::ContextMenuItem::setAction):


Canonical link: https://commits.webkit.org/23066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29228 268f45cc-cd09-0410-ab3c-d52691b4dbfc